<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guana Anuncios</string>
    <string name="title_activity_anuncio">Guananuncios</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Inicio sesion</string>
    <string name="losginUsuario">Usuario</string>
    <string name="losginPass">Clave</string>
    <string name="btnLogin">Entrar</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="regNombre">Nombre completo</string>
    <string name="regCorreo">Correo electrónico</string>
    <string name="regPass">Clave</string>
    <string name="regAlias">Alias</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_publicar_anuncio">Publicar Anuncio</string>
    <string name="seleccion_categoria">Seleccione una categoría</string>
    <string name="descripcion_articulo">Descripción del artículo</string>
    <string name="precio_articulo">Precio</string>
    <string name="correo_contacto">Correo de contacto</string>
    <string name="telefono_contacto">Teléfono de contacto</string>
    <string name="lbl_seleccione">Seleccione</string>
    <string name="title_activity_anuncios_cercanos">Anuncios Cerca de Mí</string>
    <string name="lblListadoAnuncios">Listado de anuncios cercanos</string>
    <string name="titulo_anuncio">Titulo del anuncio</string>
    <string name="titulo_procesando">Procesando.</string>
    <string name="titulo_espere">Por favor espere.</string>
    <string name="buscar_anuncios">Buscar anuncios</string>
    <string name="title_activity_anuncio_detalle">Anuncio</string>
    <string name="activa">Activar</string>
    <string name="desactivar">Desactivar</string>
    <string name="wifi">Wifi</string>
    <string name="tresGe">3G</string>
    <string name="connectionDialog">¿Activar/Desactiva conexión a internet?</string>
    <string name="titulo_publicar_anuncio">Publicar</string>
    <string name="titulo_adjuntar_imagen">Adjuntar Imagen</string>
    <string name="titulo_recargar_anuncios">Recargar Anuncios</string>
    <string name="titulo_buscar_anuncios">Buscar Anuncios</string>
    <string name="eliminar_detalle">Eliminar</string>
    <string name="mis_anuncios">Mis anuncios</string>
    <string name="todos_anuncios">Todos anuncios</string>
<<<<<<< HEAD
    <string name="titulo_widget">GuanAnuncios</string>
    <string name="title_activity_anuncio_imagen">AnuncioImagenActivity</string>

</resources>
=======
    <string name="title_activity_anuncio_imagen">AnuncioImagenActivity</string>

</resources>
>>>>>>> f47ddb553acc82cb65d41e0bb2e234a8e9069390
