<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectionDialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Switch
                android:id="@+id/swWifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                android:textOff="@string/desactivar"
                android:textOn="@string/activa" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Switch
                android:id="@+id/sw3g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tresGe"
                android:textOff="@string/desactivar"
                android:textOn="@string/activa" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
