<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/card_style_bg"
    tools:context=".AnuncioDetalleActivity" >

    <TextView
        android:id="@+id/tvTituloDetalle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/bigBoldtext" />

    <TextView
        android:id="@+id/tvDescripcionDetalle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/boldText"
            android:text="@string/precio_articulo" />

        <TextView
            android:id="@+id/tvPrecioDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/boldText"
            android:text="@string/correo_contacto" />

        <TextView
            android:id="@+id/tvCorreoDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/boldText"
            android:text="@string/telefono_contacto" />

        <TextView
            android:id="@+id/tvTelefonoDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <GridView
        android:id="@+id/gvImagenesDetalle"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:numColumns="auto_fit" >
    </GridView>

</LinearLayout>